--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -12,3 +12,25 @@ body {
 .bg-linear-blue {
   background: linear-gradient(104deg, #521ced 21.06%, #4a25b5 80.12%);
 }
+
+.scroll-style {
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+  scroll-behavior: smooth;
+  &::-webkit-scrollbar-track {
+    background-color: #4a25b5;
+    border-radius: 0 8px 8px 0;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #6936f4;
+    transition: 5s ease-in-out;
+    border-radius: 0 8px 8px 0;
+  }
+
+  &::-webkit-scrollbar {
+    max-width: 6px;
+    height: 4px;
+  }
+}
