--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -34,3 +34,14 @@ body {
     height: 4px;
   }
 }
+
+.over-box {
+  display: block;
+  position: absolute;
+  z-index: 80;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  background: transparent;
+}
