--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -13,20 +13,40 @@ body {
   background: linear-gradient(104deg, #521ced 21.06%, #4a25b5 80.12%);
 }
 
-.scroll-style {
+.scroll-style-l {
   -moz-text-size-adjust: none;
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
   scroll-behavior: smooth;
   &::-webkit-scrollbar-track {
     background-color: #4a25b5;
-    border-radius: 0 8px 8px 0;
   }
 
   &::-webkit-scrollbar-thumb {
     background-color: #6936f4;
     transition: 5s ease-in-out;
     border-radius: 0 8px 8px 0;
+  }
+
+  &::-webkit-scrollbar {
+    max-width: 6px;
+    height: 4px;
+  }
+}
+
+.scroll-style-r {
+  -moz-text-size-adjust: none;
+  -webkit-text-size-adjust: none;
+  text-size-adjust: none;
+  scroll-behavior: smooth;
+  &::-webkit-scrollbar-track {
+    background-color: #4a25b5;
+  }
+
+  &::-webkit-scrollbar-thumb {
+    background-color: #6936f4;
+    transition: 5s ease-in-out;
+    border-radius: 8px 0 0 8px;
   }
 
   &::-webkit-scrollbar {
