test: font-family

--- a/src/sass/_font.scss
+++ b/src/sass/_font.scss
@@ -1,7 +1,7 @@
 @font-face {
   font-family: "Allerta";
-  src: url("font/Allerta-Regular.woff2") format("woff2"),
-    url("font/Allerta-Regular.woff") format("woff");
+  src: url("../../public/font/Allerta-Regular.woff2") format("woff2"),
+    url("../../public/font/Allerta-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
   font-display: swap;
