--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -9,6 +9,21 @@ body {
   background-color: #fff;
 }
 
+.layout {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+header,
+footer {
+  flex-shrink: 0;
+}
+
+main {
+  flex-grow: 1;
+}
+
 .bg-linear-blue {
   background: linear-gradient(104deg, #521ced 21.06%, #4a25b5 80.12%);
 }
